# linear_regression

./: main.py  pyproject.toml
linear_regression/: regression.py
mock_dataset/: __init__.py  dataset.py
