[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["bondaenko.ilya <bondaenko.ilya@wb.ru>"]
readme = "README.md"
packages = [{include = "linear_regression"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
